<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/tvldTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPtTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPtCusNo" />
 		<EditText 
            android:id="@+id/etldCusNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/htCusNo" />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPtCusNa" />
        <EditText 
            android:id="@+id/etldCusNa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/htCusNa" />
     </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPtCusPho" />
        <EditText 
            android:id="@+id/etldCusPho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/htCusPho" />
     </LinearLayout>
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPtCusAdd" />
        <EditText 
            android:id="@+id/etldCusAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/htCusAdd" />
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
         <Button
             style="@style/AppTheme"
             android:id="@+id/btldNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btPtNext" />
	     <Button
             style="@style/AppTheme"
             android:id="@+id/btldPrev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btPtPrev" />
         <Button
             style="@style/AppTheme"
             android:id="@+id/btldEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btPtEdit" />
		<Button
             style="@style/AppTheme"
             android:id="@+id/btldDel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btPtDel" />
     </LinearLayout>

</LinearLayout>